[gd_scene load_steps=40 format=3 uid="uid://cgadmi3sydqjh"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_e0sqm"]
[ext_resource type="Texture2D" uid="uid://bh5d5ysebmle3" path="res://entities/player/sprites/idle/player-idle-1.png" id="2_xl5kk"]
[ext_resource type="Texture2D" uid="uid://cmppwe0jw5dym" path="res://entities/player/sprites/jump/player-jump-2.png" id="3_mi1oi"]
[ext_resource type="Texture2D" uid="uid://cw2gxiai8utdu" path="res://entities/player/sprites/idle/player-idle-2.png" id="4_dwbsp"]
[ext_resource type="Texture2D" uid="uid://rs5i755fle8i" path="res://entities/player/sprites/idle/player-idle-3.png" id="5_qit43"]
[ext_resource type="Texture2D" uid="uid://dbtgx35fsldyp" path="res://entities/player/sprites/idle/player-idle-4.png" id="6_5gjub"]
[ext_resource type="Texture2D" uid="uid://ovuv1tnvcjhu" path="res://entities/player/sprites/jump/player-jump-1.png" id="7_mij0s"]
[ext_resource type="Texture2D" uid="uid://dfr8b0c0r73t3" path="res://entities/player/sprites/run/player-run-1.png" id="8_sniqy"]
[ext_resource type="Texture2D" uid="uid://bv4vt4hhpv25a" path="res://entities/player/sprites/run/player-run-2.png" id="9_nfkwa"]
[ext_resource type="Texture2D" uid="uid://dyheggja7p2gc" path="res://entities/player/sprites/run/player-run-3.png" id="10_qrycd"]
[ext_resource type="Texture2D" uid="uid://b10nmv50wmt1x" path="res://entities/player/sprites/run/player-run-4.png" id="11_nf6xt"]
[ext_resource type="Texture2D" uid="uid://cdt1isevdg0rw" path="res://entities/player/sprites/run/player-run-5.png" id="12_ran4g"]
[ext_resource type="Texture2D" uid="uid://bjjonkixj84h1" path="res://entities/player/sprites/run/player-run-6.png" id="13_hrv7n"]
[ext_resource type="Texture2D" uid="uid://d1iob5umbseww" path="res://entities/player/sprites/hurt/player-hurt-1.png" id="14_08biu"]
[ext_resource type="Script" path="res://entities/player/scripts/state/idle_state.gd" id="15_eq6ef"]
[ext_resource type="Texture2D" uid="uid://ce05y7pn8i3p1" path="res://entities/player/sprites/hurt/player-hurt-2.png" id="15_uky66"]
[ext_resource type="Script" path="res://entities/player/scripts/state/move_state.gd" id="16_aee82"]
[ext_resource type="Texture2D" uid="uid://u82g0gwa340n" path="res://entities/player/sprites/crouch/player-crouch-1.png" id="16_rxs82"]
[ext_resource type="Texture2D" uid="uid://cje6mi7gynxji" path="res://entities/player/sprites/crouch/player-crouch-2.png" id="17_ngklb"]
[ext_resource type="Script" path="res://entities/player/scripts/state/jump_state.gd" id="17_xe8kk"]
[ext_resource type="Script" path="res://entities/player/scripts/state/fall_state.gd" id="18_8xsas"]
[ext_resource type="Script" path="res://entities/player/scripts/state/player_state_machine.gd" id="18_avlc4"]
[ext_resource type="Script" path="res://entities/player/scripts/player_movement_controller.gd" id="19_7k7iy"]
[ext_resource type="Script" path="res://entities/player/scripts/state/damage_state.gd" id="19_qlga8"]
[ext_resource type="Script" path="res://entities/player/scripts/interactions/interaction_controller.gd" id="20_hyx15"]
[ext_resource type="Script" path="res://entities/player/scripts/interactions/interaction_raycast.gd" id="21_58gfg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esa46"]
size = Vector2(14, 20.5)

[sub_resource type="Animation" id="Animation_lnqd1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_xl5kk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_0yitk"]
resource_name = "fall_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mi1oi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_d48hw"]
resource_name = "fall_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mi1oi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bjlsw"]
resource_name = "idle_left"
length = 0.3332
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_xl5kk"), ExtResource("4_dwbsp"), ExtResource("5_qit43"), ExtResource("6_5gjub")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_es65l"]
resource_name = "idle_right"
length = 0.3332
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_xl5kk"), ExtResource("4_dwbsp"), ExtResource("5_qit43"), ExtResource("6_5gjub")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_04i06"]
resource_name = "jump_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_mij0s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y66aa"]
resource_name = "jump_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_mij0s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hgh40"]
resource_name = "run_left"
length = 0.4998
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499, 0.3332, 0.4165),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_sniqy"), ExtResource("9_nfkwa"), ExtResource("10_qrycd"), ExtResource("11_nf6xt"), ExtResource("12_ran4g"), ExtResource("13_hrv7n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0qgnb"]
resource_name = "run_right"
length = 0.4998
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499, 0.3332, 0.4165),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_sniqy"), ExtResource("9_nfkwa"), ExtResource("10_qrycd"), ExtResource("11_nf6xt"), ExtResource("12_ran4g"), ExtResource("13_hrv7n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1mctf"]
resource_name = "damage"
length = 0.1666
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("14_08biu"), ExtResource("15_uky66")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_xocmn"]
resource_name = "crouch_right"
length = 0.1666
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("16_rxs82"), ExtResource("17_ngklb")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crbdt"]
_data = {
"RESET": SubResource("Animation_lnqd1"),
"crouch_right": SubResource("Animation_xocmn"),
"damage": SubResource("Animation_1mctf"),
"fall_left": SubResource("Animation_0yitk"),
"fall_right": SubResource("Animation_d48hw"),
"idle_left": SubResource("Animation_bjlsw"),
"idle_right": SubResource("Animation_es65l"),
"jump_left": SubResource("Animation_04i06"),
"jump_right": SubResource("Animation_y66aa"),
"run_left": SubResource("Animation_hgh40"),
"run_right": SubResource("Animation_0qgnb")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_e0sqm")
coyote_time = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.75)
shape = SubResource("RectangleShape2D_esa46")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -3)
texture = ExtResource("2_xl5kk")
offset = Vector2(-3, 2.08165e-12)
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crbdt")
}
autoplay = "idle_left"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("damage_state", "animations", "movement_controller", "starting_state")]
script = ExtResource("18_avlc4")
damage_state = NodePath("Damage")
animations = NodePath("../AnimationPlayer")
movement_controller = NodePath("../MovementController")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "jump_state", "fall_state")]
script = ExtResource("15_eq6ef")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
animation_name = "idle"

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state", "fall_state")]
script = ExtResource("16_aee82")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
animation_name = "run"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state")]
script = ExtResource("17_xe8kk")
fall_state = NodePath("../Fall")
animation_name = "jump"

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("18_8xsas")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
animation_name = "fall"

[node name="Damage" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("19_qlga8")
idle_state = NodePath("../Idle")
animation_name = "damage"
directional = false

[node name="MovementController" type="Node2D" parent="."]
position = Vector2(0, 23)
script = ExtResource("19_7k7iy")

[node name="InteractionController" type="Node2D" parent="." node_paths=PackedStringArray("movement_controller", "player")]
script = ExtResource("20_hyx15")
movement_controller = NodePath("../MovementController")
player = NodePath("..")

[node name="MiddleRight" type="RayCast2D" parent="InteractionController"]
target_position = Vector2(9, 2.08165e-12)
script = ExtResource("21_58gfg")

[node name="MiddleLeft" type="RayCast2D" parent="InteractionController"]
target_position = Vector2(-9, 2.08165e-12)
script = ExtResource("21_58gfg")

[node name="MiddleDown" type="RayCast2D" parent="InteractionController"]
target_position = Vector2(0, 14)
script = ExtResource("21_58gfg")
